# negentropy

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: burn.rs  committor.rs  constants.rs  diffusion.rs  entropy.rs  lib.rs  microstructure.rs  negentropy.rs  route_energy.rs
web/: index.html
